Fix for x86-64bit arch, and allow deleting of lxd snapshot.

--- a/profiles/gnu/arches/x86-64bit.yaml
+++ b/profiles/gnu/arches/x86-64bit.yaml
@@ -2,6 +2,6 @@ arch:
   cflags: ''
   arch: x86
   gnu_arch: x86_64
-  target: x86_64-unknown-linux-gnu
+  target: x86_64-pc-linux-gnu
   ego_arch: x86-64bit
   ego_subarch: generic_64
