--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -85,7 +85,6 @@ fchroot:
           virtual/package-manager
           sys-apps/openrc"
 
-
         attempts=0
         max_attempts=5
         while [ $attempts -lt $max_attempts ]; do
@@ -94,6 +93,8 @@ fchroot:
             source /etc/profile
             # Needed for glibc:
             export BOOTSTRAP_RAP=yes
+            # No clue why this is not being set:
+            export LD_LIBRARY_PATH=/lib:/usr/lib
 
             emerge -u --noreplace --oneshot --onlydeps --jobs=3 --rebuild-exclude "sys-apps/openrc sys-libs/glibc net-misc/curl sys-devel/gcc" $TO_BUILD
             if [ $? -ne 0 ]; then
@@ -118,6 +119,8 @@ fchroot:
             source /etc/profile
             # Needed for glibc:
             export BOOTSTRAP_RAP=yes
+            # No clue why this is not being set:
+            export LD_LIBRARY_PATH=/lib:/usr/lib
 
             attempt=1
             while [ $attempt -lt 4 ]; do
