Update for CI on master as well as minor build tweaks based on my local testing.

--- a/profiles/gnu/steps/fchroot.yaml
+++ b/profiles/gnu/steps/fchroot.yaml
@@ -188,5 +188,5 @@ fchroot:
         # fix a required USE flag
         install -d /etc/portage/package.use
         echo "dev-libs/libxml2 python" > /etc/portage/package.use/libxml2
-        emerge --oneshot python glibc
+        #emerge --oneshot python glibc
 
