--- a/profiles/gnu/sources.yaml
+++ b/profiles/gnu/sources.yaml
@@ -117,22 +117,8 @@ sources:
           version: 2.24
           url: https://gitweb.gentoo.org/proj/sandbox.git/snapshot/sandbox-{version}.tar.bz2
       - portage:
-          version: 3.0.30
-          url: https://gitweb.gentoo.org/proj/portage.git/snapshot/portage-{version}.tar.bz2
-          patches:
-            - portage-3.0.29-remove-gentoo-repos-conf.patch
-            - portage-2.3.68-change-global-paths.patch
-            - portage-2.3.41-ebuild-nodie.patch
-            - portage-3.0.29-set-backtracking-to-6.patch
-            - portage-3.0.29-enhanced-metadata.patch
-            - portage-2.3.78-static-libs-belong-where-I-put-them.patch
-            - portage-3.0.29-module-rebuild.patch
-            - portage-3.0.29-add-repodir-variable.patch
-            - portage-3.0.29-allow-matches-in-package-updates.patch
-            - portage-3.0.29-track-and-deny-keywords-r1.patch
-            - portage-3.0.29-aliases-name-check.patch
-            - portage-3.0.14-cdn-feature-ignore-mirror.patch
-            - portage-3.0.30-revert-default-enable-soname-dependencies.patch
+          package: portage-3.0.14-r10.tbz2
+          version: 3.0.14
       - ego:
           version: 2.8.6
           url: https://github.com/funtoo/ego/archive/refs/tags/{version}.tar.gz
