--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -28,8 +28,9 @@ fchroot:
         cat > ${ROOT}/etc/portage/make.profile/parent << "MKP_EOF"
         core-kit:funtoo/1.0/linux-gnu/arch/{{ego_arch}}
         core-kit:funtoo/1.0/linux-gnu/arch/{{ego_arch}}/subarch/{{ego_subarch}}
+        core-kit:funtoo/1.0/linux-gnu/build/next  
         core-kit:funtoo/1.0/linux-gnu/flavor/core
-        core-kit:funtoo/1.0/linux-gnu/mix-in/stage1
+        core-kit:funtoo/1.0/linux-gnu/mix-ins/stage1
         MKP_EOF
         # fix a circular dep
         install -d /var/db/pkg/sys-apps/openrc-9999
