More fixes for things that baselayout does wrong.

--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -19,6 +19,8 @@ fchroot:
         install -m 0755 -d $ROOT/bin
         # without this, /sbin ends up being a symlink to /usr/sbin?!
         install -m 0755 -d $ROOT/sbin
+        # without this, /usr/sbin ends up being a link to bin?!
+        install -m 0755 -d $ROOT/usr/sbin
         # also fix a lib issue -- did I miss some steps from metro?
         install -m 0755 -d $ROOT/lib64
         ln -sf lib64 $ROOT/lib
