Add app-admin/eselect to stage1 build.

--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -48,6 +48,7 @@ fchroot:
           app-arch/gzip
           app-arch/tar
           app-arch/xz-utils
+          app-admin/eselect
           app-shells/bash
           net-misc/rsync
           net-misc/wget
