--- a/profiles/gnu/sources.yaml
+++ b/profiles/gnu/sources.yaml
@@ -7,7 +7,7 @@ sources:
       - autoconf: 2.69
       - automake: 1.15.1
       - libtool: 2.4.6
-      - binutils: 2.38
+      - binutils: 2.39
       - mpfr: 4.1.0
       - gmp: 6.2.1
       - mpc:
@@ -15,21 +15,21 @@ sources:
           ext: gz
       - gcc:
           url: https://ftp.gnu.org/gnu/{name}/{name}-{version}/{name}-{version}.tar.{ext}
-          version: 11.2.0
+          version: 12.2.0
       - glibc: 2.33
       - ncurses:
           version: 6.3
           ext: gz
       - bash:
-          version: 5.1.16
+          version: 5.2
           ext: gz
-      - bison: 3.4.1
+      - bison: 3.8.2
       - coreutils: 9.1
-      - diffutils: 3.7
-      - findutils: 4.8.0
-      - gawk: 5.1.0
+      - diffutils: 3.8
+      - findutils: 4.9.0
+      - gawk: 5.2.0
       - gettext: 0.21
-      - grep: 3.6
+      - grep: 3.8
       - gzip: "1.10"
       - make:
           version: 4.2.1
@@ -42,12 +42,12 @@ sources:
       - m4:
           version: 1.4.19
       - patch: 2.7.6
-      - sed: 4.8
+      - sed: 4.9
       - tar: 1.34
-      - texinfo: 6.7
-      - nano: 6.3
+      - texinfo: 6.8
+      - nano: 6.4
       - wget:
-          version: 1.21.3
+          version: 2.0.1
           ext: gz
   non-gnu:
     packages:
@@ -55,11 +55,8 @@ sources:
           version: 4.19
           url: https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-{version}.tar.xz
       - git:
-          version: 2.36.1
+          version: 2.38.1
           url: https://cdn.kernel.org/pub/software/scm/git/git-{version}.tar.xz
-      - musl:
-          version: 1.2.3
-          url: https://musl.libc.org/releases/musl-{version}.tar.gz
       - zlib:
           version: 1.2.13
           url: https://zlib.net/zlib-{version}.tar.gz
@@ -70,19 +67,19 @@ sources:
           version: 1.0.8
           url: https://www.sourceware.org/pub/bzip2/bzip2-{version}.tar.gz
       - check:
-          version: 0.12.0
+          version: 0.15.2
           url: https://github.com/libcheck/check/releases/download/{version}/check-{version}.tar.gz
       - file:
-          version: 5.42
+          version: 5.43
           url: http://ftp.astron.com/pub/file/file-{version}.tar.gz
       - rsync:
-          version: 3.2.4
+          version: 3.2.7
           url: https://download.samba.org/pub/rsync/src/rsync-{version}.tar.gz
       - util-linux:
-          version: 2.38
+          version: 2.38.1
           url: https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/v2.38/util-linux-{version}.tar.gz
       - xz-utils:
-          version: 5.2.5
+          version: 5.2.7
           url: https://tukaani.org/xz/xz-{version}.tar.gz
           srcdir: xz-{version}
       - zstd:
@@ -92,26 +89,26 @@ sources:
           version: 2.21
           url: https://carlowood.github.io/which/which-{version}.tar.gz
       - pkgconf:
-          version: 1.5.4
+          version: 1.9.3
           url: https://distfiles.dereferenced.org/pkgconf/pkgconf-{version}.tar.xz
       - python:
-          version: 3.9.13
+          version: 3.9.15
           url: https://www.python.org/ftp/python/{version}/Python-{version}.tar.xz
           srcdir: Python-{version}
       - cmake:
-          version: 3.19.7
+          version: 3.24.0
           url: https://github.com/Kitware/CMake/releases/download/v{version}/cmake-{version}.tar.gz
       - libffi:
           version: 3.3-rc0
           url: https://github.com/libffi/libffi/releases/download/v{version}/libffi-{version}.tar.gz
       - curl:
-          version: 7.83.1
+          version: 7.86.0
           url: https://github.com/curl/curl/releases/download/curl-7_83_1/curl-{version}.tar.bz2
       - openssl:
-          version: 1.1.1n
+          version: 1.1.1s
           url: https://www.openssl.org/source/openssl-{version}.tar.gz
       - pax-utils:
-          version: 1.2.4
+          version: 1.3.5
           url: https://gitweb.gentoo.org/proj/pax-utils.git/snapshot/pax-utils-{version}.tar.bz2
       - sandbox:
           version: 2.24
