adding tmpfiles.eclass hotfix to fchroot gnu steps and other fixes for pax-utils 1.3.5 to fchroot and stage1 gnu steps

--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -81,7 +81,8 @@ fchroot:
           sys-apps/openrc
           dev-vcs/git"
 
-        emerge --noreplace --oneshot --jobs=3 $TO_BUILD
+        # pax-utils-1.3.5 requires the python USE flag to install
+        USE="python" emerge --noreplace --oneshot --jobs=3 $TO_BUILD
         gcc-config 1
         ego profile mix-in -stage1
         rm -f $ROOT/var/git/meta-repo
