--- a/profiles/gnu/sources.yaml
+++ b/profiles/gnu/sources.yaml
@@ -7,7 +7,7 @@ sources:
       - autoconf: 2.69
       - automake: 1.15.1
       - libtool: 2.4.6
-      - binutils: 2.39
+      - binutils: "2.40"
       - mpfr: 4.1.0
       - gmp: 6.2.1
       - mpc:
@@ -18,19 +18,19 @@ sources:
           version: 12.2.0
       - glibc: 2.36
       - ncurses:
-          version: 6.3
+          version: 6.4
           ext: gz
       - bash:
-          version: 5.2.9
+          version: 5.2.15
           ext: gz
       - bison: 3.8.2
       - coreutils: 9.1
       - diffutils: 3.8
       - findutils: 4.9.0
-      - gawk: 5.2.0
-      - gettext: 0.21
+      - gawk: 5.2.1
+      - gettext: 0.21.1
       - grep: 3.8
-      - gzip: "1.10"
+      - gzip: "1.12"
       - make:
           version: 4.2.1
           patches:
@@ -45,7 +45,7 @@ sources:
       - sed: 4.9
       - tar: 1.34
       - texinfo: 7.0
-      - nano: 7.0
+      - nano: 7.1
       - wget:
           version: 1.21.3
           ext: gz
@@ -55,7 +55,7 @@ sources:
           version: 4.19
           url: https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-{version}.tar.xz
       - git:
-          version: 2.38.1
+          version: 2.39.0
           url: https://cdn.kernel.org/pub/software/scm/git/git-{version}.tar.xz
       - zlib:
           version: 1.2.13
@@ -70,7 +70,7 @@ sources:
           version: 0.15.2
           url: https://github.com/libcheck/check/releases/download/{version}/check-{version}.tar.gz
       - file:
-          version: 5.43
+          version: 5.44
           url: http://ftp.astron.com/pub/file/file-{version}.tar.gz
       - rsync:
           version: 3.2.7
@@ -79,7 +79,7 @@ sources:
           version: 2.38.1
           url: https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/v2.38/util-linux-{version}.tar.gz
       - xz-utils:
-          version: 5.2.8
+          version: 5.4.1
           url: https://tukaani.org/xz/xz-{version}.tar.gz
           srcdir: xz-{version}
       - zstd:
@@ -92,18 +92,18 @@ sources:
           version: 1.9.3
           url: https://distfiles.dereferenced.org/pkgconf/pkgconf-{version}.tar.xz
       - python:
-          version: 3.9.15
+          version: 3.9.16
           url: https://www.python.org/ftp/python/{version}/Python-{version}.tar.xz
           srcdir: Python-{version}
       - cmake:
-          version: 3.24.0
+          version: 3.24.1
           url: https://github.com/Kitware/CMake/releases/download/v{version}/cmake-{version}.tar.gz
       - libffi:
           version: 3.3-rc0
           url: https://github.com/libffi/libffi/releases/download/v{version}/libffi-{version}.tar.gz
       - curl:
-          version: 7.86.0
-          url: https://github.com/curl/curl/releases/download/curl-7_86_0/curl-{version}.tar.bz2
+          version: 7.87.0
+          url: https://github.com/curl/curl/releases/download/curl-7_87_0/curl-{version}.tar.bz2
       - openssl:
           version: 1.1.1s
           url: https://www.openssl.org/source/openssl-{version}.tar.gz
