FFS-20: disable simd rolling for rsync in musl ffs build

--- a/profiles/musl/steps/tools.yaml
+++ b/profiles/musl/steps/tools.yaml
@@ -327,6 +327,7 @@ tools:
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --disable-openssl \
+        --disable-roll-simd \
         --disable-xxhash \
         --disable-zstd \
         --disable-lz4
